--- a/ProjectCraigsList/ProjectCraigsList.csproj
+++ b/ProjectCraigsList/ProjectCraigsList.csproj
@@ -115,7 +115,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\ItemHolder.cs" />
+    <Compile Include="Models\ItemViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
