--- a/ProjectCraigsList/ProjectCraigsList.csproj
+++ b/ProjectCraigsList/ProjectCraigsList.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Details.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\ItemHolder.cs" />
     <Compile Include="Models\ItemViewModel.cs" />
@@ -159,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
